# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import usersRouter from "./users";
+import tasksRouter from "./tasks";
+import leaderboardRouter from "./leaderboard";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(usersRouter);
+router.use(tasksRouter);
+router.use(leaderboardRouter);
+router.use(adminRouter);
 
 export default router;
